# claude-usage-widget

./: .gitignore  CHANGELOG.md  INSTALL.md  QUICKSTART.md  README.md  main.js  package.json  preload.js
.github/workflows/: build.yml
assets/: ICONS-NEEDED.md
frontend/: app.js  index.html  styles.css  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  main.rs  store_helpers.rs
src/renderer/: app.js  index.html  styles.css
